# JETSCAPE-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Pipfile  README.md  analyzeJetscape.py  init.sh  jetscapeAnalysisConfig.yaml  pyproject.toml  requirements.txt  setup.cfg  submitProcessing.sh
.github/workflows/: main.yml  test-build-external.yaml
analysis/: analyze_jetscape_events.py  common_base.py  jetscape_analysis.py
analysis/event/: event_base.py  event_hepmc.py
config/: PHYS_RAA.yaml  PP19.yaml  STAT_200.yaml  STAT_2760.yaml  STAT_5020.yaml  TG3.yaml  example.yaml  jet_constituents_5020.yaml  jetscapeAnalysisConfig.yaml  jetscapeTestConfig.yaml  jetscape_user_Matter+Martini_2760_0-5_50.xml  pgun.yaml
data/PHYS_RAA/: jetscape_setting.md  observables.txt
data/PHYS_RAA/data_hadron/ALICE/: HEPData-ins1657384-v1-Table_8.root
data/PHYS_RAA/data_hadron/ATLAS/0_5/: hadronRaa0-5.csv  hadronRaa0-5.txt
data/PHYS_RAA/data_hadron/ATLAS/30_40/: hadronRaa30-40.csv  hadronRaa30-40.txt
data/PHYS_RAA/data_hadron/CMS/0_5/: HEPData-ins1496050-v2-Table_8.root
data/PHYS_RAA/data_hadron/CMS/30_50/: HEPData-ins1496050-v2-Table_11.root
data/PHYS_RAA/data_hadron/CMS/5_10/: HEPData-ins1496050-v2-Table_9.root
data/PHYS_RAA/data_jet/ALICE/0_10_R02/: HEPData-ins1755387-v1-Table_30.root
data/PHYS_RAA/data_jet/ALICE/0_10_R04/: HEPData-ins1755387-v1-Table_31.root
data/PHYS_RAA/data_jet/ATLAS/0_10/: HEPData-ins1673184-v1-Table_19.root
data/PHYS_RAA/data_jet/ATLAS/30_40/: HEPData-ins1673184-v1-Table_22.root
data/PHYS_RAA/data_jet/ATLAS/40_50/: HEPData-ins1673184-v1-Table_23.root
data/PHYS_RAA/data_jet/CMS/0_10_R02/: CMS_JetRAA_R02_0-10.csv  CMS_JetRAA_R02_0-10.txt  CMS_JetRAA_R02_0-10_Rescanned.txt  sys.txt
data/PHYS_RAA/data_jet/CMS/0_10_R04/: CMS_JetRAA_R04_0-10.csv  CMS_JetRAA_R04_0-10.txt  CMS_JetRAA_R04_0-10_Rescanned.txt  sys.txt
data/PHYS_RAA/data_jet/CMS/30_50_R02/: CMS_JetRAA_R02_30-50.csv  CMS_JetRAA_R02_30-50.txt  CMS_JetRAA_R02_30-50_Rescanned.txt  sys.txt
data/PHYS_RAA/data_jet/CMS/30_50_R04/: CMS_JetRAA_R04_30-50..csv  CMS_JetRAA_R04_30-50.txt  CMS_JetRAA_R04_30-50_Rescanned.txt  sys.txt
data/STAT/200/hadron/pt_ch_star/: HEPData-ins619063-v1-Table_1.root  HEPData-ins619063-v1-Table_3.root  HEPData-ins619063-v1-root.root
data/STAT/200/hadron/pt_pi0_phenix/: HEPData-ins1127262-v2-root.root  custom_data.yaml
data/STAT/200/hadron_correlations/IAA_phenix/: HEPData-ins1798493-v1-root.root
data/STAT/200/hadron_correlations/dihadron_star/: custom_data.yaml
data/STAT/200/inclusive_chjet/pt_star/: HEPData-ins1798665-v1-Table_10.root  HEPData-ins1798665-v1-root.root
data/STAT/200/semi_inclusive_chjet/IAA_star/: HEPData-ins1512115-v1-Table_38.html  HEPData-ins1512115-v1-Table_39.html  HEPData-ins1512115-v1-Table_42.html  HEPData-ins1512115-v1-root.root
data/STAT/2760/dijet/xj_atlas/: AA.R04.July18.root  custom_data.yaml  pp.R04.Aug19.root  print_tgraph.py
data/STAT/2760/hadron/pt_ch_alice/: HEPData-ins1657384-v1-Table_4.root  HEPData-ins1657384-v1-Table_7.root
data/STAT/2760/hadron/pt_ch_atlas/: HEPData-ins1360290-v2-Table_1.root  HEPData-ins1360290-v2-Table_33.root  HEPData-ins1360290-v2-Table_34.root  HEPData-ins1360290-v2-Table_35.root  HEPData-ins1360290-v2-Table_36.root  HEPData-ins1360290-v2-Table_37.root  HEPData-ins1360290-v2-Table_38.root  HEPData-ins1360290-v2-root.root
data/STAT/2760/hadron/pt_ch_cms/: HEPData-ins1088823-v1-Table_1.root  HEPData-ins1088823-v1-Table_5.root  (+1 more)
data/STAT/inclusive_jet/pt_alice/: HEPData-ins1755387-v1-Table_4.root
data/TG3/g/: HEPData-ins1682990-v1-Table_11.root
data/TG3/hjet_IAA/: HEPData-ins1376027-v1-Table_32.root  HEPData-ins1376027-v1-Table_33.root  HEPData-ins1376027-v1-Table_34.root
data/TG3/hjet_delta_phi/: HEPData-ins1376027-v1-Table_37.root
data/TG3/m/: HEPData-ins1512107-v1-Table_4.root
docker/: Dockerfile  Dockerfile.build  README.md
generate/: generate_jetscape_events.py
jetscape_analysis/: __init__.py
jetscape_analysis/analysis/: __init__.py  analysis.py  analyze_events.py  analyze_events_PHYS.py  analyze_events_PP19.py  analyze_events_STAT.py  analyze_events_TG3.py  analyze_events_base.py  analyze_events_base_PHYS.py  analyze_events_base_STAT.py  analyze_events_base_jet_constituents.py  analyze_events_example.py  analyze_events_jet_constituents.py  analyze_events_pgun.py  example_analysis.py  plot_pthat.py  scale_histograms.py
jetscape_analysis/analysis/event/: event_ascii.py  event_base.py  event_hepmc.py
jetscape_analysis/analysis/reader/: __init__.py  parse_ascii.py  reader_ascii.py  reader_ascii_full.py  reader_ascii_parsed.py  reader_base.py  reader_hepmc.py  skim_ascii.py
jetscape_analysis/base/: __init__.py  common_base.py
jetscape_analysis/generate/: __init__.py  jetscape_events.py
plot/: histogram_results_STAT.py  plot_results_PHYS_RAA.py  plot_results_STAT.py  plot_results_STAT_utils.py  plot_results_TG3 copy.py  plot_results_TG3.py  plot_results_pp.py  steer_aggregate_and_plot_observables.py  steer_plot_observables.py
slurm/: generate_file_list.sh  generate_file_list_analyze.sh  process_analyze.sh  process_skim.sh  process_test.sh  slurm_analyze.sh  slurm_skim.sh  slurm_test.sh
slurm/merge/: hadd_results.sh  merge_after_scaling.sh  merge_before_scaling.sh  scale_pt_hat.py
src/: CMakeLists.txt  JetscapeAnalysis.cxx  JetscapeAnalysis.h  doJetscapeAnalysis.py  plotResults.py  runJetscapeAnalysis.C  scaleHistograms.py
test/: runTest.sh
test/PbPb/config/: jetscapeTestConfig.yaml
test/pp/config/: jetscapeTestConfig.yaml
testing_outputs/finalStateWriter/: compare.py  compare.sh
tests/: test_parsing.py
tests/parsing/events_per_chunk_16/parser_v1_header_v1/: test_00.parquet  test_01.parquet  test_02.parquet  test_03.parquet
tests/parsing/events_per_chunk_5/parser_v1_header_v1/: test_00.parquet  test_01.parquet  test_02.parquet  test_03.parquet  test_04.parquet  test_05.parquet  test_06.parquet  test_07.parquet  test_08.parquet  test_09.parquet
tests/parsing/events_per_chunk_50/parser_v1_header_v1/: test_00.parquet
(+360 files in other folders)
